@@ -500,7 +500,6 @@ class RucioAPI:
                 attachmentList.append(attachment)
         # add files
         client = RucioClient()
-        print attachmentList
         return client.add_files_to_datasets(attachmentList,ignore_duplicate=True)
 
 
